name:           tig
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ksaric/tig#readme>
homepage:       https://github.com/ksaric/tig#readme
bug-reports:    https://github.com/ksaric/tig/issues
author:         Kristijan Šarić
maintainer:     team@exact-byte.com
copyright:      2018 EXACT BYTE
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/ksaric/tig

library
  exposed-modules:
      Lib
  other-modules:
      Paths_tig
      Types
  ghc-options:         -Wall
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , universum
    , directory
    , filepath
    , process
    , parsec
    , QuickCheck
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      TupleSections
                      StrictData
                      ExplicitForAll
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeApplications

executable tig-exe
  main-is: Main.hs
  other-modules:
      Paths_tig
  hs-source-dirs:
      app
  ghc-options:         -threaded
                       -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:
      base >=4.7 && <5
    , universum
    , tig
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      TupleSections
                      StrictData
                      ExplicitForAll
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeApplications

test-suite tig-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_tig
  hs-source-dirs:
      test
  ghc-options:         -threaded
                       -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:
      base >=4.7 && <5
    , tig
    , universum
    -- dirs
    , directory
    , filepath
    , directory-tree
    -- util
    , process
    , parsec
    -- testing libs
    , hspec
    , QuickCheck
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      TupleSections
                      StrictData
                      ExplicitForAll
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeApplications

